--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
 }
 
 body {
-    background-color: #3676be;
-    font-family: Arial, sans-serif;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
     color: #fff;
+    background-image: radial-gradient(#518fd5 30%, transparent 20%), radial-gradient(#518fd5 30%, transparent 20%);
+    background-color: #3676be;
+    background-position: 0 0, 50px 50px;
+    background-size: 20px 20px;
+    width: 100%;
+    line-height: 1.3;
 }
 
 .wrapper {
@@ -20,33 +28,122 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 h1.title {
     flex: 1 0 100%;
     text-align: center;
-    font-size: 4em;
+    font-size: 6em;
+    line-height: 0.8;
     text-shadow: 6px 4px 0px black;
     font-style: italic;
     align-self: flex-end;
+    font-family: "Racing Sans One", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+@media screen and (max-width: 768px) {
+    h1.title {
+        font-size: 5em;
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    h1.title {
+        font-size: 3.5em;
+        margin-top: 20px;
+    }
 }
 
 .issue-card {
     background-color: #fff;
     color: #000;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 6px 4px 0px black;
     margin: 10px;
     padding: 20px;
+    width: 600px;
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width: 768px) {
+    .issue-card {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
+
+}
+
+.issue-card .info,
+.issue-card .cover {
+    flex: 1 0 50%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.issue-card .ingo a:link,
+.issue-card .info a:visited {
+    color: #518fd5;
+    text-decoration: none;
+}
+
+.issue-card .info p:last-child {
+    margin-bottom: 0;
+}
+
+.issue-card .cover {
     text-align: center;
 }
 
+.issue-card .cover img {
+    width: 250px;
+    max-width: 100%;
+}
+
 .issue-card h2 {
-    font-size: 1.5em;
+    font-size: 1.3em;
+    margin-bottom: -5px;
+}
+
+.issue-card .info h3.issue-title {
+    font-size: 1.7em;
+    font-family: "Racing Sans One", serif;
+    font-weight: normal;
+    font-style: normal;
+    margin-bottom: 0px;
+}
+
+.issue-card p {
+    font-size: 1.2em;
     margin-bottom: 10px;
 }
 
-.issue-card img {
-    margin-top: 20px;
+.issue-card .description {
+    font-size: 0.9em;
+    margin-bottom: 10px;
+    border-top: 1px solid #518fd5;
+    padding-top: 10px;
+}
+
+.issue-card .description em {
+    font-style: normal;
+}
+
+.issue-card .info button {
+    background-color: #518fd5;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2em;
+    font-family: "Racing Sans One", serif;
+    font-weight: 400;
+    font-style: normal;
 }
